<resources>
    <string name="app_name">WerkstukEnnioDeRooms</string>
    <string name="Name">Naam</string>
    <string name="Password">Paswoord</string>
    <string name="Login">Inloggen</string>
    <string name="Register">Registreer</string>
    <string name="email">email</string>
    <string name="nieuwsbrief_ontvangen">Nieuwsbrief ontvangen</string>
    <string name="Info">Info</string>
    <string name="Events">Dranken</string>
    <string name="Dranken">Dranken</string>
    <string name="Logout">Afmelden</string>
    <string name="Search">Zoeken</string>
</resources>
