<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistreerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Register"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="@+id/scrollView2" />

        <EditText
            android:id="@+id/txtRegistreerNaam"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="LabelFor"
            android:layout_marginLeft="22dp" />

        <EditText
            android:id="@+id/txtRegistreerEmail"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor"
            android:layout_marginLeft="22dp" />

        <EditText
            android:id="@+id/txtRegistreerPassword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            tools:ignore="LabelFor"
            android:layout_marginLeft="22dp" />

        <EditText
            android:id="@+id/txtRegistreerCheckPassword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />

        <CheckBox
            android:id="@+id/chkNieuwsbrief"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:button="@drawable/checkbox_statelist"
            android:text="@string/nieuwsbrief_ontvangen" />

        <Button
            android:id="@+id/btnRegistreerButton"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/button"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/Register"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>